tests/neg/new-expr-with-safe-zone1.check
Bad symbolic reference. A signature
refers to SafeZone/T in package scala.scalanative.safe which is not available.
It may be completely missing from the current classpath, or the version on
the classpath might be incompatible with the version used when compiling the signature.
Bad symbolic reference. A signature
refers to SafeZone/T in package scala.scalanative.safe which is not available.
It may be completely missing from the current classpath, or the version on
the classpath might be incompatible with the version used when compiling the signature.
-- [E007] Type Mismatch Error: tests/neg/new-expr-with-safe-zone1.scala:8:18 -------------------------------------------
8 |    val a1 = new {str} A(0) // error // nopos-error // nopos-error
  |                  ^^^
  |                  Found:    (str : String)
  |                  Required: scala.scalanative.safe.SafeZone
  |                  Note that new-expr-with-safe-zone syntax is only supported in Scala Native environment.
  |
  | longer explanation available when compiling with `-explain`
